package payment;

public class Payment {
    public void pay(double amount) {
        System.out.println("Thanh toán " + amount + " VND (chưa xác định phương thức).\n");
    }
}
